fix bug on IE

--- a/XiaoweiSchool/task7/task7.css
+++ b/XiaoweiSchool/task7/task7.css
@@ -89,10 +89,11 @@ body{
 }
 
 #main {
-    position: relative;
-    overflow: auto;
+    /*position: relative;*/
+    /*overflow: hidden;*/
 }
 #main .main-img-cont {
+    position: relative;
     width: 100%;
     height: 854px;
     background: url(http://omcbb8o2a.bkt.clouddn.com/image/baidu-ife/XiaoweiSchool/task7/main_img.png) no-repeat 0 0;
@@ -152,6 +153,7 @@ body{
     border-right: none;
 }
 #activities {
+    width: 100%;
     overflow: auto;
 }
 #activities .title {
